loan apply changes

--- a/ProjectUbuild/Views/Home/Guidelines.cshtml
+++ b/ProjectUbuild/Views/Home/Guidelines.cshtml
@@ -9,8 +9,8 @@
     <div class="background-image-holder fadeIn" style="transform: translate3d(0px, 0px, 0px); background: url(&quot;img/home10.jpg&quot;); top: -100px;">
         <img alt="Background Image" class="background-image" src="img/home10.jpg" style="display: none;">
     </div>
-    <div class="container">
-        <div class="row">
+    <div class="container-fluid">
+        <div class="row" style="margin-top: 33px">
             <div class="col-md-6">
                 <h2 class="uppercase mb8" style="font-size:25px;line-height:25px">Guidelines</h2>
                 <p class="lead mb0">What do I need to apply for a loan.</p>
