--- a/ProjectUbuild/Views/Loan/Eligibility.cshtml
+++ b/ProjectUbuild/Views/Loan/Eligibility.cshtml
@@ -9,8 +9,8 @@
     <div class="background-image-holder fadeIn" style="transform: translate3d(0px, 0px, 0px); background: url(&quot;img/home10.jpg&quot;); top: -100px;">
         <img alt="Background Image" class="background-image" src="img/home10.jpg" style="display: none;">
     </div>
-    <div class="container">
-        <div class="row">
+    <div class="container-fluid">
+        <div class="row" style="margin-top: 33px">
             <div class="col-md-6">
                 <h2 class="uppercase mb8" style="font-size:25px;line-height:25px">Check Loan eligibility</h2>
                 <p class="lead mb0">Find out if you are able to take a loan with us.</p>
@@ -54,7 +54,7 @@
                                 <label for="phase">Phase</label>
                             </span>
                         </div>
-                        <input type="button" name="next" class="next action-button" value="Next" title="Select a loan type to continue." ng-disabled="!builder.loanType"/>
+                        <input type="button" name="next" class="msformnext action-button" value="Next" title="Select a loan type to continue." ng-disabled="!builder.loanType"/>
                     </fieldset>
                     <fieldset ng-show="builder.loanType=='Phase'">
                         <h2 class="fs-title">Choose Phase</h2>
@@ -68,8 +68,8 @@
                                 <option>Fittings and Fixtures</option>
                             </select>
                         </div>
-                        <input type="button" name="previous" class="previous action-button" value="Previous" />
-                        <input type="button" name="next" class="next action-button" value="Next" title="Complete form to continue." ng-disabled="!builder.phase"/>
+                        <input type="button" name="previous" class="msformprevious action-button" value="Previous" />
+                        <input type="button" name="next" class="msformnext action-button" value="Next" title="Complete form to continue." ng-disabled="!builder.phase"/>
                     </fieldset>
                     <fieldset>
                         <h2 class="fs-title">Enter your financials</h2>
@@ -109,7 +109,7 @@
                                 </div>
                             </div>
                         </div>
-                        <input type="button" name="previous" class="previous action-button" value="Previous" />
+                        <input type="button" name="previous" class="msformprevious action-button" value="Previous" />
                         <input type="button" data-ng-show="builder.currency" data-ng-click="checkEligibility()" style="width: 200px" class="action-button" value="Check Eligibility" />
                         <div class="card-progress" data-ng-show="loading" style="background-color: rgba(255, 255, 255, 0.8); display: block;">
                             <div class="progress-circle-indeterminate progress-circle-master"></div>
