--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -32,6 +32,7 @@
 <script src="~/assets/plugins/bootstrap-typehead/typeahead.bundle.min.js"></script>
 <script src="~/assets/plugins/bootstrap-typehead/typeahead.jquery.min.js"></script>
 <script src="~/assets/plugins/handlebars/handlebars-v4.0.5.js"></script>
+<script src="~/assets/plugins/bootstrap-form-wizard/js/jquery.bootstrap.wizard.min.js"></script>
 <script src="~/assets/plugins/ion-slider/js/ion.rangeSlider.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/jquery-nouislider/jquery.nouislider.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/jquery-nouislider/jquery.liblink.js" type="text/javascript"></script>
@@ -48,10 +49,12 @@
 <script src="~/assets/foundry/js/parallax.js"></script>
 <script src="~/assets/foundry/js/scripts.js"></script>
 <script src="~/assets/js/sweetalert.min.js"></script>
+
 <!-- BEGIN CORE TEMPLATE JS -->
 <script src="~/pages/js/pages.min.js"></script>
 <script src="~/assets/js/card.js"></script>
 <script src="~/assets/js/Controllers/index.js"></script>
+<script src="~/assets/js/form_wizard.js"></script>
 <!-- END CORE TEMPLATE JS -->
 <!-- BEGIN PAGE LEVEL JS -->
 <script src="~/assets/js/dashboard.js" type="text/javascript"></script>
