--- a/ProjectUbuild/Views/Loan/Apply.cshtml
+++ b/ProjectUbuild/Views/Loan/Apply.cshtml
@@ -36,13 +36,13 @@
                 <li class="nav-item">
                     <a class="active" data-toggle="tab" href="#tab2" role="tab"><i class="fa fa-search tab-icon"></i> <span>Check Eligibility </span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" ng-if="vm.applyModel.eligible">
                     <a class="" data-toggle="tab" href="#tab3" role="tab"><i class="fa fa-gear tab-icon"></i> <span> Options Type</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" ng-if="vm.applyModel.eligible">
                     <a class="" data-toggle="tab" href="#tab4" role="tab"><i class="fa fa-file tab-icon"></i> <span>Complete Information</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" ng-if="vm.applyModel.eligible">
                     <a class="" data-toggle="tab" href="#tab5" role="tab"><i class="fa fa-check tab-icon"></i> <span>Thank You</span></a>
                 </li>
             </ul>
