--- a/ProjectUbuild/Views/Profile/Index.cshtml
+++ b/ProjectUbuild/Views/Profile/Index.cshtml
@@ -83,7 +83,7 @@
                                 </div>
                             </div>
                         </div>
-                        <input type="button" name="next" data-ng-disabled="vm.isReadonly" class="next action-button" value="Continue" title="Select a loan type to continue." />
+                        <input type="button" name="next" data-ng-disabled="vm.isReadonly" class="msformnext action-button" value="Continue" title="Select a loan type to continue." />
                     </fieldset>
                     <fieldset data-ng-disabled="vm.isReadonly">
                         <h2 class="fs-title">Basic Information</h2>
@@ -516,7 +516,7 @@
                                 </div>
                             </div>
                         </div>
-                        <input type="button" name="previous" class="previous action-button" value="Previous" />
+                        <input type="button" name="previous" class="msformprevious action-button" value="Previous" />
 
                         <input type="submit" name="previous" style="width: 200px" class="action-button" value="Submit" />
                     </fieldset>
