--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -53,6 +53,7 @@
 <!-- BEGIN CORE TEMPLATE JS -->
 <script src="~/pages/js/pages.min.js"></script>
 <script src="~/assets/js/card.js"></script>
+<script src="~/assets/plugins/image-picker/image-picker.min.js"></script>
 <script src="~/assets/js/Controllers/index.js"></script>
 <script src="~/assets/js/form_wizard.js"></script>
 <!-- END CORE TEMPLATE JS -->
@@ -68,3 +69,4 @@
 <script src="~/Scripts/app/eligibility.controller.js"></script>
 <script src="~/Scripts/app/update-profile.conftroller.js"></script>
 <script src="~/Scripts/app/loanapplication.controller.js"></script>
+<script src="~/Scripts/app/HouseDesign.js"></script>
